# rilato

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .windsurfrules  README.md  build.sh  me.alantaranti.rilato.json  meson.build  new_release.sh  pyproject.toml  pytest.ini  requirements.txt  run.sh  tasks.py  update_python_deps.sh
.junie/: guidelines.md
data/: me.alantaranti.rilato.desktop.in  me.alantaranti.rilato.gschema.xml  me.alantaranti.rilato.metainfo.xml.in  me.alantaranti.rilato.service.in  meson.build  org.gabmus.gfeeds.appdata.xml.in  org.gabmus.gfeeds.desktop.in  org.gabmus.gfeeds.gresource.xml  org.gabmus.gfeeds.gschema.xml.in  org.gabmus.rilato.appdata.xml.in  org.gabmus.rilato.gresource.xml  org.gabmus.rilato.service.desktop
data/icons/: meson.build
data/ui/: aboutdialog.ui.in  add_feed_box.ui  add_feed_popover.blp  add_feed_popover.ui  article_right_click_popover_content.ui  empty_state.blp  empty_state.ui  extra_popover_menu.blp  extra_popover_menu.ui  filter_view.blp  gfeeds_leaflet.ui  gtk_style.css  headerbar.glade  headerbar.ui  left_headerbar.blp  left_headerbar.ui  main_leaflet.blp  main_leaflet.ui  manage_feeds_headerbar.blp  manage_feeds_headerbar.ui  manage_feeds_listbox_row.blp  manage_feeds_listbox_row.ui  manage_tags_content.blp  manage_tags_content.ui  manage_tags_listbox_row.blp  manage_tags_listbox_row.ui  manage_tags_listbox_row_content.ui  manage_tags_popover_content.glade  manage_tags_popover_content.ui  meson.build  reader_mode_style.css  right_headerbar.blp  right_headerbar.ui  row_popover.blp  scrolled_dialog.blp  scrolled_label.blp  scrolled_label.ui  shortcutsWindow.blp  shortcutsWindow.ui  sidebar_listbox_row.blp  (+8 more)
gfeeds/: __main__.py  accel_manager.py  app_window.py  articles_listmodel.py  articles_listview.py  base_app.py  base_preferences.py  build_reader_html.py  confManager.py  conf_mapper.py  confirm_add_dialog.py  download_manager.py  feed.py  feed_item.py  feed_parser.py  feed_store.py  feeds_manager.py  feeds_view.py  filter_view.py  get_children.py  get_favicon.py  get_thumb.py  gsettings_wrapper.py  headerbar.py  initials_icon.py  main_leaflet.py  manage_feeds_window.py  opml_file_chooser.py  opml_manager.py  picture_view.py  preferences_window.py  readability_wrapper.py  reader_mode_style.py  relative_day_formatter.py  revealer_loading_bar.py  rss_link_from_file.py  rss_parser.py  scrolled_dialog.py  scrolled_message_dialog.py  searchbar.py  (+15 more)
gfeeds/util/: build_reader_html.py  download_manager.py  get_favicon.py  get_thumb.py  opml_generator.py  opml_parser.py  paths.py  readability_wrapper.py  reader_mode_style.py  relative_day_formatter.py  rss_link_from_file.py  test_connection.py  thread_pool.py  to_unicode.py
git-hooks/: pre-push
po/: LINGUAS  POTFILES.in  README.md  ca.po  cs.po  da.po  de.po  es.po  eu.po  fa.po  fi.po  fr.po  fur.po  he.po  hi.po  hu.po  id.po  it.po  ka.po  ko.po  meson.build  nl.po  org.gabmus.gfeeds.pot  org.gabmus.rilato.pot  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sv.po  tr.po  uk.po  update_potfiles.sh  zh_CN.po
rilato/: __main__.py  accel_manager.py  app_window.py  articles_listmodel.py  articles_listview.py  base_app.py  base_preferences.py  confManager.py  conf_mapper.py  feed.py  feed_item.py  feed_parser.py  feed_store.py  feeds_manager.py  feeds_view.py  filter_view.py  gsettings_wrapper.py  headerbar.py  main_leaflet.py  manage_feeds_window.py  opml_file_chooser.py  picture_view.py  preferences_window.py  scrolled_dialog.py  shortcuts_window.py  sidebar.py  sidebar_row.py  simple_avatar.py  stack_with_empty_state.py  tag_store.py  webview.py
rilato/util/: build_reader_html.py  create_full_url.py  download_manager.py  feed_parser_utils.py  get_favicon.py  get_thumb.py  html_parser.py  opml_generator.py  opml_parser.py  paths.py  readability_wrapper.py  reader_mode_style.py  relative_day_formatter.py  rss_link_from_file.py  test_connection.py  thread_pool.py  to_unicode.py
src/: main.py  meson.build  rilato.gresource.xml  rilato.in  window.py
test/: __init__.py  feed_from_html.py  generate_opml.py  sample_rss.py  test_feed_from_html.py  test_feed_item_with_html_in_title.py  test_generate_opml.py  test_parse_feed.py  test_parse_opml.py  test_url_complete.py
tests/: README.md  __init__.py  conftest.py  rss_parser.py  test_main.py
tests/bugs_regression/: feed_drewdevault_com.py
